<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/topics"
            android:icon="@drawable/ic_topics_nav"
            android:title="@string/menu_topic" />
        <item
            android:id="@+id/friends"
            android:icon="@drawable/ic_friends_nav"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/message"
            android:icon="@drawable/ic_nav_message"
            android:title="@string/menu_message" />
        <item
            android:id="@+id/achievements"
            android:icon="@drawable/ic_nav_achievements"
            android:title="@string/menu_achievements" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
