<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen_16x"
        android:layout_weight="1"
        android:paddingLeft="@dimen/dimen_64x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_64x"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_trophy" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_32x">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingTop="@dimen/dimen_16x" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_16x"
        android:paddingRight="@dimen/dimen_32x"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="@dimen/dimen_16x"
            android:password="true"
            android:textColor="@color/light_grey" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/dimen_32x"
        android:paddingTop="@dimen/dimen_32x"
        android:paddingRight="@dimen/dimen_32x"
        android:text="@string/forgot_password"
        android:textColor="@color/dark_grey"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_32x"
        android:layout_marginTop="@dimen/dimen_16x"
        android:layout_marginRight="@dimen/dimen_32x"
        android:text="@string/log_in" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dimen_16x"
        android:background="@color/light_grey" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/not_a_member_signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/not_a_member_sign_up"
        android:textColor="@color/light_grey" />
</LinearLayout>